--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "open Sans Condensed", sans-serif;
+  font-family: "open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
